Add onegov.election_day to applications

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
         - ONEGOV_APPLICATION=onegov.town
         - ONEGOV_APPLICATION=onegov.feriennet
         - ONEGOV_APPLICATION=onegov.onboarding
+        - ONEGOV_APPLICATION=onegov.election_day
 
 addons:
     postgresql: "9.3"
