--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
     - py.test -s
 
 after_script:
-    - $TRAVIS_BUILD_DIR/.tox/py34/bin/pip freeze | sed -r "s/^-e git.*?egg=([a-z\._]+)$/\1==${TRAVIS_TAG:1}/g" > $TRAVIS_BUILD_DIR/requirements.txt
+    - pip freeze | sed -r "s/^-e git.*?egg=([a-z\._]+)$/\1==${TRAVIS_TAG:1}/g" > $TRAVIS_BUILD_DIR/requirements.txt
     - cat requirements.txt
     - |
         $(npm bin)/travis-after-all
