--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: pip
 
 env:
     global:
-        - ES_VERSION=2.4.3
+        - ES_VERSION=5.2.2
     matrix:
         - ONEGOV_APPLICATION=onegov.org
         - ONEGOV_APPLICATION=onegov.town
@@ -14,6 +14,9 @@ env:
 
 addons:
     postgresql: "9.3"
+    apt:
+        packages:
+            - oracle-java8-set-default
 
 before_install:
     - npm install --save-dev travis-after-all
