--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - ONEGOV_APPLICATION=onegov.town
     - ONEGOV_APPLICATION=onegov.feriennet
     - ONEGOV_APPLICATION=onegov.onboarding
+    - ONEGOV_APPLICATION=onegov.gazette
 
 addons:
   postgresql: "9.3"
