Include google-chrome-stable for onegov.org tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
   apt:
     packages:
       - oracle-java8-set-default
+      - google-chrome-stable
 
 before_install:
   - npm install --save-dev travis-after-all
