--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ jobs:
       install:
         - pip install boto3
         - STAGE='install' python install.py
-        - pip freeze | sed -r "s/^-e git.*?egg=([a-z\._]+)$/\1==${TRAVIS_TAG:1}/g" > "${TRAVIS_BUILD_DIR}"/requirements.txt
+        - pip freeze | sed -r "s/^-e git.*?egg=([a-z\._]+)$/\1==${TRAVIS_TAG}/g" > "${TRAVIS_BUILD_DIR}"/requirements.txt
       deploy:
         - provider: releases
           api_key:
