Include onegov.intranet in build

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
     - ONEGOV_APPLICATION=onegov.feriennet
     - ONEGOV_APPLICATION=onegov.onboarding
     - ONEGOV_APPLICATION=onegov.gazette
+    - ONEGOV_APPLICATION=onegov.intranet
 
 install:
   - pip install boto3
