Adds onegov.winterthur

--- a/onegov/applications/applications.json
+++ b/onegov/applications/applications.json
@@ -26,5 +26,9 @@
     {
         "package": "onegov.intranet",
         "tests": "onegov.intranet[test]"
+    },
+    {
+        "package": "onegov.winterthur",
+        "tests": "onegov.winterthur[test]"
     }
 ]
