Adds ghostscript dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ addons:
     packages:
       - oracle-java9-set-default
       - google-chrome-stable
+      - ghostscript
 
 stages:
   - install
