--- a/onegov/applications/applications.json
+++ b/onegov/applications/applications.json
@@ -30,5 +30,9 @@
     {
         "package": "onegov.winterthur",
         "tests": "onegov.winterthur[test]"
+    },
+    {
+        "package": "onegov.swissvotes",
+        "tests": "onegov.swissvotes[test]"
     }
 ]
