--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ venv/
 *.egg-info/
 .installed.cfg
 *.egg
+Pipfile
+Pipfile.lock
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
