--- a/onegov/applications/applications.json
+++ b/onegov/applications/applications.json
@@ -34,5 +34,9 @@
     {
         "package": "onegov.swissvotes",
         "tests": "onegov.swissvotes[test]"
+    },
+    {
+        "package": "onegov.agency",
+        "tests": "onegov.agency[test]"
     }
 ]
