--- a/onegov/applications/applications.json
+++ b/onegov/applications/applications.json
@@ -39,4 +39,8 @@
         "package": "onegov.agency",
         "tests": "onegov.agency[test]"
     }
+    {
+        "package": "onegov.wtfs",
+        "tests": "onegov.wtfs[test]"
+    }
 ]
